welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:29: error: not found: value False
while (haveBaggle()==False)
                     ^